<resources>
    <string name="app_name">ProyectoAndroid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">nombre</string>
    <string name="cedula">cedula</string>
    <string name="descripcion">descripcion</string>
    <string name="correo">correo</string>
    <string name="guardar">Guardar</string>
    <string name="ubicacion">Ubicación</string>
    <string name="horario">Horario</string>
    <string name="tiposrv">Tipo de servicio</string>
    <string name="nuevoCLiente">Nuevo cliente</string>
    <string name="tipo">Tipo</string>
    <string name="telefono">Teléfono</string>
    <string name="nuevoEncargado">Nuevo encargado</string>
    <string name="nuevoServicio">Nuevo servicio</string>

    <string name="menuServicio">Servicios</string>
    <string name="menuEncargados">Encargados</string>
    <string name="menuClientes">Clientes</string>
    <string name="menuVistaUsuario">Ver como Usuario</string>
</resources>
